--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cuedev - A modern developer's website">
+    <meta name="description" content="Cuedev - Hacker-inspired website">
     <title>cuedev.de</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -27,16 +27,16 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>Hi, I'm a Developer.</h1>
-                <p>Welcome to my space on the internet. Let's build something amazing together.</p>
-                <a href="#projects" class="cta-btn">See My Projects</a>
+                <h1>Welcome to cuedev.de</h1>
+                <p>Get ready for some code!</p>
+                <a href="#projects" class="cta-btn">Access Projects</a>
             </div>
         </section>
 
         <section id="about" class="section">
             <div class="container">
                 <h2>About Me</h2>
-                <p>I'm a developer who loves to create websites, apps, and digital experiences.</p>
+                <p>I'm a developer with a passion for creating everything from scratch using terminal commands and old-school code.</p>
             </div>
         </section>
 
@@ -46,15 +46,15 @@
                 <div class="projects">
                     <div class="project">
                         <h3>Project 1</h3>
-                        <p>Description of Project 1.</p>
+                        <p>Command-line tool for handling tasks.</p>
                     </div>
                     <div class="project">
                         <h3>Project 2</h3>
-                        <p>Description of Project 2.</p>
+                        <p>Terminal-based web scraper built with Python.</p>
                     </div>
                     <div class="project">
                         <h3>Project 3</h3>
-                        <p>Description of Project 3.</p>
+                        <p>Automated script for monitoring system processes.</p>
                     </div>
                 </div>
             </div>
@@ -78,6 +78,5 @@
             <p>&copy; 2025 cuedev.de | Built by Cuedev</p>
         </div>
     </footer>
-
 </body>
 </html>
