--- a/index.html
+++ b/index.html
@@ -3,34 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cuedev - Hacker-inspired website">
+    <meta name="description" content="Cuedev - Developer & Enthusiast">
     <title>cuedev.de</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="terminal">
-        <header>
-            <h1>KazuDev</h1>
-            <h2>Cybersecurity Enthusiast & Developer</h2>
-        </header>
+    <div class="background"></div>
 
-        <section class="commands">
-            <pre>
-kazudev@secure:~$ whoami
-17-year-old developer with 4 years of experience
+    <header>
+        <div class="container">
+            <h1>cuedev</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-kazudev@secure:~$ cat skills.txt
-C#, C++, JavaScript, HTML, Cybersecurity
-
-kazudev@secure:~$ echo "Status: Learning cybersecurity"
-Status: Learning cybersecurity
-            </pre>
+    <main>
+        <section id="about" class="section">
+            <h2>About Me</h2>
+            <p>Hello! I'm a passionate developer with experience in multiple languages like C#, HTML, Python, XAML, and JavaScript. I love creating innovative projects and solving problems with code.</p>
         </section>
 
-        <footer>
-            <p>&copy; 2025 cuedev.de | Built by Cuedev</p>
-        </footer>
-    </div>
+        <section id="skills" class="section">
+            <h2>Skills</h2>
+            <div class="skills">
+                <div class="skill">C#</div>
+                <div class="skill">HTML</div>
+                <div class="skill">Python</div>
+                <div class="skill">XAML</div>
+                <div class="skill">JavaScript</div>
+            </div>
+        </section>
+
+        <section id="projects" class="section">
+            <h2>Projects</h2>
+            <div class="projects">
+                <div class="project">
+                    <h3>Project 1</h3>
+                    <p>A web-based application for task management built with HTML, JS, and Python.</p>
+                </div>
+                <div class="project">
+                    <h3>Project 2</h3>
+                    <p>Mobile app development using C# and XAML for creating cross-platform applications.</p>
+                </div>
+                <div class="project">
+                    <h3>Project 3</h3>
+                    <p>A desktop application built in C# for system automation and productivity.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="section">
+            <h2>Contact</h2>
+            <form action="#">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 cuedev.de | Built by Cuedev</p>
+    </footer>
+
 </body>
 </html>
