--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cuedev - Developer & Enthusiast">
-    <title>cuedev.de</title>
+    <meta name="description" content="CueDev - Developer & Enthusiast">
+    <title>CueDev - Developer Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,10 +12,11 @@
 
     <header>
         <div class="container">
-            <h1>cuedev</h1>
+            <h1>CueDev</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -26,17 +27,28 @@
     <main>
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>Hello! I'm a passionate developer with experience in multiple languages like C#, HTML, Python, XAML, and JavaScript. I love creating innovative projects and solving problems with code.</p>
+            <p>Hi! I'm CueDev, a passionate software developer with a love for creating innovative solutions. I specialize in building interactive websites, crafting immersive experiences with Unity, and automating tasks using Python. My expertise lies in transforming ideas into code and bringing complex systems to life.</p>
         </section>
 
         <section id="skills" class="section">
             <h2>Skills</h2>
-            <div class="skills">
-                <div class="skill">C#</div>
-                <div class="skill">HTML</div>
-                <div class="skill">Python</div>
-                <div class="skill">XAML</div>
-                <div class="skill">JavaScript</div>
+            <div class="skill-box">
+                <div class="skill">
+                    <h3>C# & Unity</h3>
+                    <p>Expert in C# with a focus on Unity game development, creating interactive 3D and 2D experiences, as well as VR/AR applications. Familiar with performance optimization and asset management within Unity.</p>
+                </div>
+                <div class="skill">
+                    <h3>XAML & C#</h3>
+                    <p>Skilled in building modern desktop applications with WPF (Windows Presentation Foundation), utilizing C# and XAML for smooth, responsive UIs.</p>
+                </div>
+                <div class="skill">
+                    <h3>HTML & JavaScript (Websites)</h3>
+                    <p>Proficient in building responsive, user-friendly websites using HTML, CSS, and JavaScript. Passionate about front-end technologies and optimizing for performance and SEO.</p>
+                </div>
+                <div class="skill">
+                    <h3>Python (Automation & Scripting)</h3>
+                    <p>Experienced in using Python for system automation, data manipulation, and creating scripts for daily tasks, improving productivity, and solving real-world problems.</p>
+                </div>
             </div>
         </section>
 
@@ -45,15 +57,15 @@
             <div class="projects">
                 <div class="project">
                     <h3>Project 1</h3>
-                    <p>A web-based application for task management built with HTML, JS, and Python.</p>
+                    <p>A Unity-based game with immersive 3D environments and AI-driven characters.</p>
                 </div>
                 <div class="project">
                     <h3>Project 2</h3>
-                    <p>Mobile app development using C# and XAML for creating cross-platform applications.</p>
+                    <p>Web application built with HTML, JavaScript, and Python to manage user data and automate reporting tasks.</p>
                 </div>
                 <div class="project">
                     <h3>Project 3</h3>
-                    <p>A desktop application built in C# for system automation and productivity.</p>
+                    <p>WPF desktop application with C# and XAML for real-time data visualization and controls.</p>
                 </div>
             </div>
         </section>
@@ -70,8 +82,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 cuedev.de | Built by Cuedev</p>
+        <p>&copy; 2025 CueDev | Built by CueDev</p>
     </footer>
-
 </body>
 </html>
