--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>Hi! I'm CueDev, a passionate software developer with a love for creating innovative solutions. I specialize in building interactive websites, crafting immersive experiences with Unity, and automating tasks using Python. My expertise lies in transforming ideas into code and bringing complex systems to life.</p>
+            <p>Hi! I'm CueDev, a passionate software developer. I specialize in creating interactive websites, building immersive Unity experiences, and designing modern WPF UIs. I enjoy coding and bringing ideas to life with clean and efficient code.</p>
         </section>
 
         <section id="skills" class="section">
@@ -35,19 +35,19 @@
             <div class="skill-box">
                 <div class="skill">
                     <h3>C# & Unity</h3>
-                    <p>Expert in C# with a focus on Unity game development, creating interactive 3D and 2D experiences, as well as VR/AR applications. Familiar with performance optimization and asset management within Unity.</p>
+                    <p>Skilled in game development using Unity, building both 3D and 2D games with complex mechanics and engaging experiences.</p>
                 </div>
                 <div class="skill">
                     <h3>XAML & C#</h3>
-                    <p>Skilled in building modern desktop applications with WPF (Windows Presentation Foundation), utilizing C# and XAML for smooth, responsive UIs.</p>
+                    <p>Experienced in creating modern desktop applications with WPF, using XAML and C# for building smooth and responsive user interfaces.</p>
                 </div>
                 <div class="skill">
                     <h3>HTML & JavaScript (Websites)</h3>
-                    <p>Proficient in building responsive, user-friendly websites using HTML, CSS, and JavaScript. Passionate about front-end technologies and optimizing for performance and SEO.</p>
+                    <p>Proficient in building responsive and user-friendly websites using HTML, CSS, and JavaScript.</p>
                 </div>
                 <div class="skill">
-                    <h3>Python (Automation & Scripting)</h3>
-                    <p>Experienced in using Python for system automation, data manipulation, and creating scripts for daily tasks, improving productivity, and solving real-world problems.</p>
+                    <h3>Python</h3>
+                    <p>Proficient in Python, particularly for automation and scripting tasks, streamlining workflows and improving productivity.</p>
                 </div>
             </div>
         </section>
@@ -56,16 +56,16 @@
             <h2>Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <h3>Project 1</h3>
-                    <p>A Unity-based game with immersive 3D environments and AI-driven characters.</p>
+                    <h3>Project 1: Dark Fantasy Game (Unity)</h3>
+                    <p>A dark fantasy game built in Unity, featuring rich 3D environments, engaging combat mechanics, and an immersive storyline.</p>
                 </div>
                 <div class="project">
-                    <h3>Project 2</h3>
-                    <p>Web application built with HTML, JavaScript, and Python to manage user data and automate reporting tasks.</p>
+                    <h3>Project 2: CueDev Portfolio (This Website)</h3>
+                    <p>This website you're currently viewing, built with HTML, CSS, and JavaScript, to showcase my skills and projects.</p>
                 </div>
                 <div class="project">
-                    <h3>Project 3</h3>
-                    <p>WPF desktop application with C# and XAML for real-time data visualization and controls.</p>
+                    <h3>Project 3: Modern Menus in XAML & C#</h3>
+                    <p>Developed modern, stylish menus for WPF desktop applications using C# and XAML. I sell these UI templates for $5 each.</p>
                 </div>
             </div>
         </section>
@@ -78,6 +78,12 @@
                 <textarea name="message" placeholder="Your Message" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
+        </section>
+
+        <section id="payment" class="section">
+            <h2>Support My Work</h2>
+            <p>If you'd like to support my work or purchase a WPF UI template, you can pay me via CashApp:</p>
+            <a href="https://cash.app/$DevinSlifer0" target="_blank">Pay me on CashApp</a>
         </section>
     </main>
 
