--- a/index.html
+++ b/index.html
@@ -3,104 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CueDev - Developer & Enthusiast">
-    <title>CueDev - Developer Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>CueDev Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Animated background -->
-    <div class="background">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+    <div id="particles"></div>
+
+    <div class="container">
+        <header>
+            <h1>CueDev Portfolio</h1>
+        </header>
+
+        <section id="about">
+            <h2>About CueDev</h2>
+            <p>I'm <strong>CueDev</strong>, a passionate developer who loves to create innovative solutions. With a focus on Unity game development, WPF UI design, and web development, I enjoy building interactive applications and websites that are both functional and visually appealing.</p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>C# & Unity</li>
+                <li>XAML & C# (WPF)</li>
+                <li>HTML, CSS, JavaScript (Websites)</li>
+                <li>Python (Scripting & Automation)</li>
+            </ul>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li>Dark Fantasy Game (Unity)</li>
+                <li>CueDev Portfolio (This Website)</li>
+                <li>Modern Menus in XAML & C#</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>If you'd like to get in touch, feel free to send me a message or email me at <strong>devslifer2029@gmail.com</strong>.</p>
+        </section>
+
+        <section id="support">
+            <h2>Support My Work</h2>
+            <p>If you like my work or want to support me, you can send payments via <a href="https://cash.app/$DevinSlifer0" target="_blank">CashApp</a>.</p>
+        </section>
+
+        <footer>
+            <p>Thanks for visiting my portfolio! Feel free to reach out for collaboration opportunities.</p>
+        </footer>
     </div>
 
-    <header>
-        <div class="container">
-            <h1>CueDev</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <main>
-        <section id="about" class="section">
-            <h2>About Me</h2>
-            <p>Hi! I'm CueDev, a passionate software developer. I specialize in creating interactive websites, building immersive Unity experiences, and designing modern WPF UIs. I enjoy coding and bringing ideas to life with clean and efficient code.</p>
-        </section>
-
-        <section id="skills" class="section">
-            <h2>Skills</h2>
-            <div class="skill-box">
-                <div class="skill">
-                    <h3>C# & Unity</h3>
-                    <p>Skilled in game development using Unity, building both 3D and 2D games with complex mechanics and engaging experiences.</p>
-                </div>
-                <div class="skill">
-                    <h3>XAML & C#</h3>
-                    <p>Experienced in creating modern desktop applications with WPF, using XAML and C# for building smooth and responsive user interfaces.</p>
-                </div>
-                <div class="skill">
-                    <h3>HTML & JavaScript (Websites)</h3>
-                    <p>Proficient in building responsive and user-friendly websites using HTML, CSS, and JavaScript.</p>
-                </div>
-                <div class="skill">
-                    <h3>Python</h3>
-                    <p>Proficient in Python, particularly for automation and scripting tasks, streamlining workflows and improving productivity.</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="projects" class="section">
-            <h2>Projects</h2>
-            <div class="projects">
-                <div class="project">
-                    <h3>Project 1: Dark Fantasy Game (Unity)</h3>
-                    <p>A dark fantasy game built in Unity, featuring rich 3D environments, engaging combat mechanics, and an immersive storyline.</p>
-                </div>
-                <div class="project">
-                    <h3>Project 2: CueDev Portfolio (This Website)</h3>
-                    <p>This website you're currently viewing, built with HTML, CSS, and JavaScript, to showcase my skills and projects.</p>
-                </div>
-                <div class="project">
-                    <h3>Project 3: Modern Menus in XAML & C#</h3>
-                    <p>Developed modern, stylish menus for WPF desktop applications using C# and XAML. I sell these UI templates for $5 each.</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="section">
-            <h2>Contact</h2>
-            <form action="#">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
-
-        <section id="payment" class="section">
-            <h2>Support My Work</h2>
-            <p>If you'd like to support my work or purchase a WPF UI template, you can pay me via CashApp:</p>
-            <a href="https://cash.app/$DevinSlifer0" target="_blank">Pay me on CashApp</a>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 CueDev | Built by CueDev</p>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
